<resources>
    <string name="app_name">Harry Potter and the Quiz App</string>
    <string name="name">Name</string>
    <string name="hint">Answer</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="question_1">Q1: What was the fourth obstacle protecting the Sorcerer\'s Stone?</string>
    <string name="question_1_option_1">Devil\'s Snare</string>
    <string name="question_1_option_2">Wizard\'s Chess</string>
    <string name="question_1_option_3">Flying Keys</string>
    <string name="question_1_option_4">Potions Riddle</string>
    <string name="question_2">Q2: Who gave Tom Riddle\'s diary to Ginny Weasley?</string>
    <string name="question_2_option_1">Severus Snape</string>
    <string name="question_2_option_2">Draco Malfoy</string>
    <string name="question_2_option_3">Gilderoy Lockhart</string>
    <string name="question_2_option_4">Lucius Malfoy</string>
    <string name="question_3">Q3: What model of broom did Sirius give Harry?</string>
    <string name="question_3_answer">firebolt</string>
    <string name="question_4">Q4: What kind of dragon does Harry face in the first Triwizard challenge?</string>
    <string name="question_4_option_1">Hungarian Horntail</string>
    <string name="question_4_option_2">Chinese Fireball</string>
    <string name="question_4_option_3">Swedish Shortsnout</string>
    <string name="question_4_option_4">Common Welsh Green</string>
    <string name="question_5">Q5: What is the name of Hagrid\'s giant half-brother?</string>
    <string name="question_5_answer">grawp</string>
    <string name="question_6">Q6: Select all the horcruxes:</string>
    <string name="question_6_option_1">Riddle\'s Diary</string>
    <string name="question_6_option_2">Rowena Ravenclaw\'s Diadem</string>
    <string name="question_6_option_3">Salazar Slytherin\'s Ring</string>
    <string name="question_6_option_4">Helga Hufflepuff\'s Cup</string>
    <string name="question_6_option_5">Godric Gryffindor\'s Locket</string>
    <string name="question_6_option_6">Nagini</string>
    <string name="question_7">Q7: What is the name of the goblin who assists the trio in the Gringotts break-in?</string>
    <string name="question_7_answer">griphook</string>
</resources>
