<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tyler_buchheim.harrypotterandthequizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:padding="25dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1" />

                <RadioGroup
                    style="@style/question_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/question_1_option_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_1" />

                    <RadioButton
                        android:id="@+id/question_1_option_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_2" />

                    <RadioButton
                        android:id="@+id/question_1_option_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_3" />

                    <RadioButton
                        android:id="@+id/question_1_option_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_4" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/question_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2" />

                    <RadioGroup
                        style="@style/question_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/question_2_option_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_2_option_1" />

                        <RadioButton
                            android:id="@+id/question_2_option_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_2_option_2" />

                        <RadioButton
                            android:id="@+id/question_2_option_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_2_option_3" />

                        <RadioButton
                            android:id="@+id/question_2_option_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_2_option_4" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3" />

                <EditText
                    android:id="@+id/question_3_guess"
                    style="@style/question_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4" />

                <RadioGroup
                    style="@style/question_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/question_4_option_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_option_1" />

                    <RadioButton
                        android:id="@+id/question_4_option_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_option_2" />

                    <RadioButton
                        android:id="@+id/question_4_option_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_option_3" />

                    <RadioButton
                        android:id="@+id/question_4_option_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_option_4" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5" />

                <EditText
                    android:id="@+id/question_5_guess"
                    style="@style/question_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_6" />

                <LinearLayout
                    style="@style/question_body"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/question_6_option_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_6_option_1" />

                    <CheckBox
                        android:id="@+id/question_6_option_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_6_option_2" />

                    <CheckBox
                        android:id="@+id/question_6_option_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_6_option_3" />

                    <CheckBox
                        android:id="@+id/question_6_option_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_6_option_4" />

                    <CheckBox
                        android:id="@+id/question_6_option_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_6_option_5" />

                    <CheckBox
                        android:id="@+id/question_6_option_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_6_option_6" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_7" />

                <EditText
                    android:id="@+id/question_7_guess"
                    style="@style/question_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="textCapWords" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:onClick="getQuizResults"
            android:padding="10dp"
            android:text="@string/quiz_results"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</ScrollView>
